HW2/pa2sdk/src/y.output
Terminals unused in grammar

   BOOL
   UNKNOWN


State 35 conflicts: 1 shift/reduce
State 78 conflicts: 1 reduce/reduce
State 80 conflicts: 1 reduce/reduce
State 113 conflicts: 1 shift/reduce
State 114 conflicts: 1 shift/reduce
State 116 conflicts: 1 shift/reduce
State 120 conflicts: 1 shift/reduce
State 156 conflicts: 1 shift/reduce
State 174 conflicts: 1 shift/reduce
State 198 conflicts: 1 shift/reduce
State 199 conflicts: 1 shift/reduce
State 200 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmtlist1
    2        | EVAL '(' expr ')' ';'

    3 stmtlist1: %empty
    4          | decls stmtlist1
    5          | func_decl stmtlist1

    6 func_stmtlist: decls_list stmtlist

    7 stmtlist: %empty
    8         | stmt stmtlist

    9 decls_list: %empty
   10           | decls decls_list

   11 func_right_side: ':' INT '{' func_stmtlist '}'
   12                | ':' ID '{' func_stmtlist '}'
   13                | '{' func_stmtlist '}'

   14 func_decl: FUNCTION ID '(' paramlist ')' func_right_side

   15 decls: VAR ID ':' DATA '=' expr ';'
   16      | VAR ID ':' DATA '=' array_assign ';'
   17      | VAR ID ':' '{' paramlist '}' ';'
   18      | VAR ID ':' DATA ';'
   19      | VAR ID ':' ID '=' '{' struct_declare '}' ';'
   20      | VAR ID ':' '{' paramlist '}' '=' '{' struct_declare '}' ';'
   21      | TYPE ID ':' '{' struct_declare '}' ';'
   22      | TYPE ID ':' '[' DATA ']' ';'

   23 struct_declare: ID ':' INT struct_declare2
   24               | ID ':' ID struct_declare2
   25               | ID '=' expr struct_declare2
   26               | ID '=' '{' struct_declare '}' struct_declare2

   27 struct_declare2: %empty
   28                | ',' ID ':' INT struct_declare2
   29                | ',' ID ':' ID struct_declare2
   30                | ',' ID '=' expr struct_declare2

   31 stmt: IF '(' expr ')' '{' stmtlist '}' else_statement
   32     | RETURN return_type ';'
   33     | WHILE '(' expr ')' '{' stmtlist '}'
   34     | FOR '(' ID '=' expr TO expr ')' '{' stmtlist '}'
   35     | ID '=' expr ';'
   36     | '{' struct_declare '}' '.' ID '=' expr ';'
   37     | func_left_side func_right_side_assign ';'
   38     | array_assign '[' NUM ']' '=' expr ';'
   39     | ID '[' expr ']' '=' expr ';'
   40     | ID '.' ID '=' expr ';'
   41     | PRINT '(' ID ')' ';'

   42 else_statement: %empty
   43               | ELSE '{' stmtlist '}'

   44 func_left_side: ID '(' exprlist ')'

   45 func_right_side_assign: %empty
   46                       | '[' NUM ']' '=' expr
   47                       | '.' ID '=' expr

   48 return_type: %empty
   49            | '(' expr ')'

   50 exprlist: exprList2

   51 exprList2: expr1 expr2
   52          | %empty

   53 expr1: expr

   54 expr2: %empty
   55      | ',' expr expr2

   56 expr: '(' expr ')'
   57     | NUM
   58     | expr '+' expr
   59     | expr '-' expr
   60     | expr '*' expr
   61     | expr '/' expr
   62     | expr '%' expr
   63     | func_left_side
   64     | ID
   65     | '-' expr
   66     | '+' expr
   67     | array_assign
   68     | '{' struct_declare '}' '.' ID
   69     | ID array_elems
   70     | ID '.' ID
   71     | TRUE
   72     | FALSE
   73     | expr '&' expr
   74     | expr '|' expr
   75     | expr "==" expr
   76     | expr "!=" expr
   77     | expr "<=" expr
   78     | expr ">=" expr
   79     | expr '>' expr
   80     | expr '<' expr
   81     | '!' expr
   82     | STR
   83     | NIL

   84 array_elems: '[' expr ']' array_elems2

   85 array_elems2: %empty
   86             | array_elems

   87 paramlist: %empty
   88          | P1 P2

   89 P1: ID ':' DATA

   90 P2: %empty
   91   | ',' ID ':' DATA P2

   92 DATA: INT
   93     | ARRAY
   94     | ID
   95     | struct_declare
   96     | array_assign

   97 ARRAY: '[' DATA ']'

   98 array_assign: '[' exprlist ']'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 81
'%' (37) 62
'&' (38) 73
'(' (40) 2 14 31 33 34 41 44 49 56
')' (41) 2 14 31 33 34 41 44 49 56
'*' (42) 60
'+' (43) 58 66
',' (44) 28 29 30 55 91
'-' (45) 59 65
'.' (46) 36 40 47 68 70
'/' (47) 61
':' (58) 11 12 15 16 17 18 19 20 21 22 23 24 28 29 89 91
';' (59) 2 15 16 17 18 19 20 21 22 32 35 36 37 38 39 40 41
'<' (60) 80
'=' (61) 15 16 19 20 25 26 30 34 35 36 38 39 40 46 47
'>' (62) 79
'[' (91) 22 38 39 46 84 97 98
']' (93) 22 38 39 46 84 97 98
'{' (123) 11 12 13 17 19 20 21 26 31 33 34 36 43 68
'|' (124) 74
'}' (125) 11 12 13 17 19 20 21 26 31 33 34 36 43 68
error (256)
VAR (258) 15 16 17 18 19 20
TYPE (259) 21 22
FUNCTION (260) 14
FOR (261) 34
TO (262) 34
WHILE (263) 33
IF (264) 31
ELSE (265) 43
RETURN (266) 32
NIL (267) 83
TRUE (268) 71
FALSE (269) 72
INT (270) 11 23 28 92
BOOL (271)
ID (272) 12 14 15 16 17 18 19 20 21 22 23 24 25 26 28 29 30 34 35 36
    39 40 41 44 47 64 68 69 70 89 91 94
STR (273) 82
NUM (274) 38 46 57
UNKNOWN (275)
EVAL (276) 2
PRINT (277) 41
"<=" (278) 77
">=" (279) 78
"==" (280) 75
"!=" (281) 76
UPLUS (282)
NEG (283)
UMINUS (284)


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 1 2, on right: 0
stmtlist1 (53)
    on left: 3 4 5, on right: 1 4 5
func_stmtlist (54)
    on left: 6, on right: 11 12 13
stmtlist (55)
    on left: 7 8, on right: 6 8 31 33 34 43
decls_list (56)
    on left: 9 10, on right: 6 10
func_right_side (57)
    on left: 11 12 13, on right: 14
func_decl (58)
    on left: 14, on right: 5
decls (59)
    on left: 15 16 17 18 19 20 21 22, on right: 4 10
struct_declare (60)
    on left: 23 24 25 26, on right: 19 20 21 26 36 68 95
struct_declare2 (61)
    on left: 27 28 29 30, on right: 23 24 25 26 28 29 30
stmt (62)
    on left: 31 32 33 34 35 36 37 38 39 40 41, on right: 8
else_statement (63)
    on left: 42 43, on right: 31
func_left_side (64)
    on left: 44, on right: 37 63
func_right_side_assign (65)
    on left: 45 46 47, on right: 37
return_type (66)
    on left: 48 49, on right: 32
exprlist (67)
    on left: 50, on right: 44 98
exprList2 (68)
    on left: 51 52, on right: 50
expr1 (69)
    on left: 53, on right: 51
expr2 (70)
    on left: 54 55, on right: 51 55
expr (71)
    on left: 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
    74 75 76 77 78 79 80 81 82 83, on right: 2 15 25 30 31 33 34 35
    36 38 39 40 46 47 49 53 55 56 58 59 60 61 62 65 66 73 74 75 76
    77 78 79 80 81 84
array_elems (72)
    on left: 84, on right: 69 86
array_elems2 (73)
    on left: 85 86, on right: 84
paramlist (74)
    on left: 87 88, on right: 14 17 20
P1 (75)
    on left: 89, on right: 88
P2 (76)
    on left: 90 91, on right: 88 91
DATA (77)
    on left: 92 93 94 95 96, on right: 15 16 18 22 89 91 97
ARRAY (78)
    on left: 97, on right: 93
array_assign (79)
    on left: 98, on right: 16 38 67 96


State 0

    0 $accept: . program $end

    VAR       shift, and go to state 1
    TYPE      shift, and go to state 2
    FUNCTION  shift, and go to state 3
    EVAL      shift, and go to state 4

    $default  reduce using rule 3 (stmtlist1)

    program    go to state 5
    stmtlist1  go to state 6
    func_decl  go to state 7
    decls      go to state 8


State 1

   15 decls: VAR . ID ':' DATA '=' expr ';'
   16      | VAR . ID ':' DATA '=' array_assign ';'
   17      | VAR . ID ':' '{' paramlist '}' ';'
   18      | VAR . ID ':' DATA ';'
   19      | VAR . ID ':' ID '=' '{' struct_declare '}' ';'
   20      | VAR . ID ':' '{' paramlist '}' '=' '{' struct_declare '}' ';'

    ID  shift, and go to state 9


State 2

   21 decls: TYPE . ID ':' '{' struct_declare '}' ';'
   22      | TYPE . ID ':' '[' DATA ']' ';'

    ID  shift, and go to state 10


State 3

   14 func_decl: FUNCTION . ID '(' paramlist ')' func_right_side

    ID  shift, and go to state 11


State 4

    2 program: EVAL . '(' expr ')' ';'

    '('  shift, and go to state 12


State 5

    0 $accept: program . $end

    $end  shift, and go to state 13


State 6

    1 program: stmtlist1 .

    $default  reduce using rule 1 (program)


State 7

    5 stmtlist1: func_decl . stmtlist1

    VAR       shift, and go to state 1
    TYPE      shift, and go to state 2
    FUNCTION  shift, and go to state 3

    $default  reduce using rule 3 (stmtlist1)

    stmtlist1  go to state 14
    func_decl  go to state 7
    decls      go to state 8


State 8

    4 stmtlist1: decls . stmtlist1

    VAR       shift, and go to state 1
    TYPE      shift, and go to state 2
    FUNCTION  shift, and go to state 3

    $default  reduce using rule 3 (stmtlist1)

    stmtlist1  go to state 15
    func_decl  go to state 7
    decls      go to state 8


State 9

   15 decls: VAR ID . ':' DATA '=' expr ';'
   16      | VAR ID . ':' DATA '=' array_assign ';'
   17      | VAR ID . ':' '{' paramlist '}' ';'
   18      | VAR ID . ':' DATA ';'
   19      | VAR ID . ':' ID '=' '{' struct_declare '}' ';'
   20      | VAR ID . ':' '{' paramlist '}' '=' '{' struct_declare '}' ';'

    ':'  shift, and go to state 16


State 10

   21 decls: TYPE ID . ':' '{' struct_declare '}' ';'
   22      | TYPE ID . ':' '[' DATA ']' ';'

    ':'  shift, and go to state 17


State 11

   14 func_decl: FUNCTION ID . '(' paramlist ')' func_right_side

    '('  shift, and go to state 18


State 12

    2 program: EVAL '(' . expr ')' ';'

    NIL    shift, and go to state 19
    TRUE   shift, and go to state 20
    FALSE  shift, and go to state 21
    ID     shift, and go to state 22
    STR    shift, and go to state 23
    NUM    shift, and go to state 24
    '+'    shift, and go to state 25
    '-'    shift, and go to state 26
    '('    shift, and go to state 27
    '{'    shift, and go to state 28
    '['    shift, and go to state 29
    '!'    shift, and go to state 30

    func_left_side  go to state 31
    expr            go to state 32
    array_assign    go to state 33


State 13

    0 $accept: program $end .

    $default  accept


State 14

    5 stmtlist1: func_decl stmtlist1 .

    $default  reduce using rule 5 (stmtlist1)


State 15

    4 stmtlist1: decls stmtlist1 .

    $default  reduce using rule 4 (stmtlist1)


State 16

   15 decls: VAR ID ':' . DATA '=' expr ';'
   16      | VAR ID ':' . DATA '=' array_assign ';'
   17      | VAR ID ':' . '{' paramlist '}' ';'
   18      | VAR ID ':' . DATA ';'
   19      | VAR ID ':' . ID '=' '{' struct_declare '}' ';'
   20      | VAR ID ':' . '{' paramlist '}' '=' '{' struct_declare '}' ';'

    INT  shift, and go to state 34
    ID   shift, and go to state 35
    '{'  shift, and go to state 36
    '['  shift, and go to state 37

    struct_declare  go to state 38
    DATA            go to state 39
    ARRAY           go to state 40
    array_assign    go to state 41


State 17

   21 decls: TYPE ID ':' . '{' struct_declare '}' ';'
   22      | TYPE ID ':' . '[' DATA ']' ';'

    '{'  shift, and go to state 42
    '['  shift, and go to state 43


State 18

   14 func_decl: FUNCTION ID '(' . paramlist ')' func_right_side

    ID  shift, and go to state 44

    $default  reduce using rule 87 (paramlist)

    paramlist  go to state 45
    P1         go to state 46


State 19

   83 expr: NIL .

    $default  reduce using rule 83 (expr)


State 20

   71 expr: TRUE .

    $default  reduce using rule 71 (expr)


State 21

   72 expr: FALSE .

    $default  reduce using rule 72 (expr)


State 22

   44 func_left_side: ID . '(' exprlist ')'
   64 expr: ID .
   69     | ID . array_elems
   70     | ID . '.' ID

    '('  shift, and go to state 47
    '['  shift, and go to state 48
    '.'  shift, and go to state 49

    $default  reduce using rule 64 (expr)

    array_elems  go to state 50


State 23

   82 expr: STR .

    $default  reduce using rule 82 (expr)


State 24

   57 expr: NUM .

    $default  reduce using rule 57 (expr)


State 25

   66 expr: '+' . expr

    NIL    shift, and go to state 19
    TRUE   shift, and go to state 20
    FALSE  shift, and go to state 21
    ID     shift, and go to state 22
    STR    shift, and go to state 23
    NUM    shift, and go to state 24
    '+'    shift, and go to state 25
    '-'    shift, and go to state 26
    '('    shift, and go to state 27
    '{'    shift, and go to state 28
    '['    shift, and go to state 29
    '!'    shift, and go to state 30

    func_left_side  go to state 31
    expr            go to state 51
    array_assign    go to state 33


State 26

   65 expr: '-' . expr

    NIL    shift, and go to state 19
    TRUE   shift, and go to state 20
    FALSE  shift, and go to state 21
    ID     shift, and go to state 22
    STR    shift, and go to state 23
    NUM    shift, and go to state 24
    '+'    shift, and go to state 25
    '-'    shift, and go to state 26
    '('    shift, and go to state 27
    '{'    shift, and go to state 28
    '['    shift, and go to state 29
    '!'    shift, and go to state 30

    func_left_side  go to state 31
    expr            go to state 52
    array_assign    go to state 33


State 27

   56 expr: '(' . expr ')'

    NIL    shift, and go to state 19
    TRUE   shift, and go to state 20
    FALSE  shift, and go to state 21
    ID     shift, and go to state 22
    STR    shift, and go to state 23
    NUM    shift, and go to state 24
    '+'    shift, and go to state 25
    '-'    shift, and go to state 26
    '('    shift, and go to state 27
    '{'    shift, and go to state 28
    '['    shift, and go to state 29
    '!'    shift, and go to state 30

    func_left_side  go to state 31
    expr            go to state 53
    array_assign    go to state 33


State 28

   68 expr: '{' . struct_declare '}' '.' ID

    ID  shift, and go to state 54

    struct_declare  go to state 55


State 29

   98 array_assign: '[' . exprlist ']'

    NIL    shift, and go to state 19
    TRUE   shift, and go to state 20
    FALSE  shift, and go to state 21
    ID     shift, and go to state 22
    STR    shift, and go to state 23
    NUM    shift, and go to state 24
    '+'    shift, and go to state 25
    '-'    shift, and go to state 26
    '('    shift, and go to state 27
    '{'    shift, and go to state 28
    '['    shift, and go to state 29
    '!'    shift, and go to state 30

    $default  reduce using rule 52 (exprList2)

    func_left_side  go to state 31
    exprlist        go to state 56
    exprList2       go to state 57
    expr1           go to state 58
    expr            go to state 59
    array_assign    go to state 33


State 30

   81 expr: '!' . expr

    NIL    shift, and go to state 19
    TRUE   shift, and go to state 20
    FALSE  shift, and go to state 21
    ID     shift, and go to state 22
    STR    shift, and go to state 23
    NUM    shift, and go to state 24
    '+'    shift, and go to state 25
    '-'    shift, and go to state 26
    '('    shift, and go to state 27
    '{'    shift, and go to state 28
    '['    shift, and go to state 29
    '!'    shift, and go to state 30

    func_left_side  go to state 31
    expr            go to state 60
    array_assign    go to state 33


State 31

   63 expr: func_left_side .

    $default  reduce using rule 63 (expr)


State 32

    2 program: EVAL '(' expr . ')' ';'
   58 expr: expr . '+' expr
   59     | expr . '-' expr
   60     | expr . '*' expr
   61     | expr . '/' expr
   62     | expr . '%' expr
   73     | expr . '&' expr
   74     | expr . '|' expr
   75     | expr . "==" expr
   76     | expr . "!=" expr
   77     | expr . "<=" expr
   78     | expr . ">=" expr
   79     | expr . '>' expr
   80     | expr . '<' expr

    "<="  shift, and go to state 61
    ">="  shift, and go to state 62
    "=="  shift, and go to state 63
    "!="  shift, and go to state 64
    '|'   shift, and go to state 65
    '&'   shift, and go to state 66
    '<'   shift, and go to state 67
    '>'   shift, and go to state 68
    '+'   shift, and go to state 69
    '-'   shift, and go to state 70
    '*'   shift, and go to state 71
    '/'   shift, and go to state 72
    '%'   shift, and go to state 73
    ')'   shift, and go to state 74


State 33

   67 expr: array_assign .

    $default  reduce using rule 67 (expr)


State 34

   92 DATA: INT .

    $default  reduce using rule 92 (DATA)


State 35

   19 decls: VAR ID ':' ID . '=' '{' struct_declare '}' ';'
   23 struct_declare: ID . ':' INT struct_declare2
   24               | ID . ':' ID struct_declare2
   25               | ID . '=' expr struct_declare2
   26               | ID . '=' '{' struct_declare '}' struct_declare2
   94 DATA: ID .

    ':'  shift, and go to state 75
    '='  shift, and go to state 76

    '='       [reduce using rule 94 (DATA)]
    $default  reduce using rule 94 (DATA)


State 36

   17 decls: VAR ID ':' '{' . paramlist '}' ';'
   20      | VAR ID ':' '{' . paramlist '}' '=' '{' struct_declare '}' ';'

    ID  shift, and go to state 44

    $default  reduce using rule 87 (paramlist)

    paramlist  go to state 77
    P1         go to state 46


State 37

   97 ARRAY: '[' . DATA ']'
   98 array_assign: '[' . exprlist ']'

    NIL    shift, and go to state 19
    TRUE   shift, and go to state 20
    FALSE  shift, and go to state 21
    INT    shift, and go to state 34
    ID     shift, and go to state 78
    STR    shift, and go to state 23
    NUM    shift, and go to state 24
    '+'    shift, and go to state 25
    '-'    shift, and go to state 26
    '('    shift, and go to state 27
    '{'    shift, and go to state 28
    '['    shift, and go to state 37
    '!'    shift, and go to state 30

    $default  reduce using rule 52 (exprList2)

    struct_declare  go to state 38
    func_left_side  go to state 31
    exprlist        go to state 56
    exprList2       go to state 57
    expr1           go to state 58
    expr            go to state 59
    DATA            go to state 79
    ARRAY           go to state 40
    array_assign    go to state 80


State 38

   95 DATA: struct_declare .

    $default  reduce using rule 95 (DATA)


State 39

   15 decls: VAR ID ':' DATA . '=' expr ';'
   16      | VAR ID ':' DATA . '=' array_assign ';'
   18      | VAR ID ':' DATA . ';'

    ';'  shift, and go to state 81
    '='  shift, and go to state 82


State 40

   93 DATA: ARRAY .

    $default  reduce using rule 93 (DATA)


State 41

   96 DATA: array_assign .

    $default  reduce using rule 96 (DATA)


State 42

   21 decls: TYPE ID ':' '{' . struct_declare '}' ';'

    ID  shift, and go to state 54

    struct_declare  go to state 83


State 43

   22 decls: TYPE ID ':' '[' . DATA ']' ';'

    INT  shift, and go to state 34
    ID   shift, and go to state 84
    '['  shift, and go to state 37

    struct_declare  go to state 38
    DATA            go to state 85
    ARRAY           go to state 40
    array_assign    go to state 41


State 44

   89 P1: ID . ':' DATA

    ':'  shift, and go to state 86


State 45

   14 func_decl: FUNCTION ID '(' paramlist . ')' func_right_side

    ')'  shift, and go to state 87


State 46

   88 paramlist: P1 . P2

    ','  shift, and go to state 88

    $default  reduce using rule 90 (P2)

    P2  go to state 89


State 47

   44 func_left_side: ID '(' . exprlist ')'

    NIL    shift, and go to state 19
    TRUE   shift, and go to state 20
    FALSE  shift, and go to state 21
    ID     shift, and go to state 22
    STR    shift, and go to state 23
    NUM    shift, and go to state 24
    '+'    shift, and go to state 25
    '-'    shift, and go to state 26
    '('    shift, and go to state 27
    '{'    shift, and go to state 28
    '['    shift, and go to state 29
    '!'    shift, and go to state 30

    $default  reduce using rule 52 (exprList2)

    func_left_side  go to state 31
    exprlist        go to state 90
    exprList2       go to state 57
    expr1           go to state 58
    expr            go to state 59
    array_assign    go to state 33


State 48

   84 array_elems: '[' . expr ']' array_elems2

    NIL    shift, and go to state 19
    TRUE   shift, and go to state 20
    FALSE  shift, and go to state 21
    ID     shift, and go to state 22
    STR    shift, and go to state 23
    NUM    shift, and go to state 24
    '+'    shift, and go to state 25
    '-'    shift, and go to state 26
    '('    shift, and go to state 27
    '{'    shift, and go to state 28
    '['    shift, and go to state 29
    '!'    shift, and go to state 30

    func_left_side  go to state 31
    expr            go to state 91
    array_assign    go to state 33


State 49

   70 expr: ID '.' . ID

    ID  shift, and go to state 92


State 50

   69 expr: ID array_elems .

    $default  reduce using rule 69 (expr)


State 51

   58 expr: expr . '+' expr
   59     | expr . '-' expr
   60     | expr . '*' expr
   61     | expr . '/' expr
   62     | expr . '%' expr
   66     | '+' expr .
   73     | expr . '&' expr
   74     | expr . '|' expr
   75     | expr . "==" expr
   76     | expr . "!=" expr
   77     | expr . "<=" expr
   78     | expr . ">=" expr
   79     | expr . '>' expr
   80     | expr . '<' expr

    $default  reduce using rule 66 (expr)


State 52

   58 expr: expr . '+' expr
   59     | expr . '-' expr
   60     | expr . '*' expr
   61     | expr . '/' expr
   62     | expr . '%' expr
   65     | '-' expr .
   73     | expr . '&' expr
   74     | expr . '|' expr
   75     | expr . "==" expr
   76     | expr . "!=" expr
   77     | expr . "<=" expr
   78     | expr . ">=" expr
   79     | expr . '>' expr
   80     | expr . '<' expr

    $default  reduce using rule 65 (expr)


State 53

   56 expr: '(' expr . ')'
   58     | expr . '+' expr
   59     | expr . '-' expr
   60     | expr . '*' expr
   61     | expr . '/' expr
   62     | expr . '%' expr
   73     | expr . '&' expr
   74     | expr . '|' expr
   75     | expr . "==" expr
   76     | expr . "!=" expr
   77     | expr . "<=" expr
   78     | expr . ">=" expr
   79     | expr . '>' expr
   80     | expr . '<' expr

    "<="  shift, and go to state 61
    ">="  shift, and go to state 62
    "=="  shift, and go to state 63
    "!="  shift, and go to state 64
    '|'   shift, and go to state 65
    '&'   shift, and go to state 66
    '<'   shift, and go to state 67
    '>'   shift, and go to state 68
    '+'   shift, and go to state 69
    '-'   shift, and go to state 70
    '*'   shift, and go to state 71
    '/'   shift, and go to state 72
    '%'   shift, and go to state 73
    ')'   shift, and go to state 93


State 54

   23 struct_declare: ID . ':' INT struct_declare2
   24               | ID . ':' ID struct_declare2
   25               | ID . '=' expr struct_declare2
   26               | ID . '=' '{' struct_declare '}' struct_declare2

    ':'  shift, and go to state 75
    '='  shift, and go to state 94


State 55

   68 expr: '{' struct_declare . '}' '.' ID

    '}'  shift, and go to state 95


State 56

   98 array_assign: '[' exprlist . ']'

    ']'  shift, and go to state 96


State 57

   50 exprlist: exprList2 .

    $default  reduce using rule 50 (exprlist)


State 58

   51 exprList2: expr1 . expr2

    ','  shift, and go to state 97

    $default  reduce using rule 54 (expr2)

    expr2  go to state 98


State 59

   53 expr1: expr .
   58 expr: expr . '+' expr
   59     | expr . '-' expr
   60     | expr . '*' expr
   61     | expr . '/' expr
   62     | expr . '%' expr
   73     | expr . '&' expr
   74     | expr . '|' expr
   75     | expr . "==" expr
   76     | expr . "!=" expr
   77     | expr . "<=" expr
   78     | expr . ">=" expr
   79     | expr . '>' expr
   80     | expr . '<' expr

    "<="  shift, and go to state 61
    ">="  shift, and go to state 62
    "=="  shift, and go to state 63
    "!="  shift, and go to state 64
    '|'   shift, and go to state 65
    '&'   shift, and go to state 66
    '<'   shift, and go to state 67
    '>'   shift, and go to state 68
    '+'   shift, and go to state 69
    '-'   shift, and go to state 70
    '*'   shift, and go to state 71
    '/'   shift, and go to state 72
    '%'   shift, and go to state 73

    $default  reduce using rule 53 (expr1)


State 60

   58 expr: expr . '+' expr
   59     | expr . '-' expr
   60     | expr . '*' expr
   61     | expr . '/' expr
   62     | expr . '%' expr
   73     | expr . '&' expr
   74     | expr . '|' expr
   75     | expr . "==" expr
   76     | expr . "!=" expr
   77     | expr . "<=" expr
   78     | expr . ">=" expr
   79     | expr . '>' expr
   80     | expr . '<' expr
   81     | '!' expr .

    $default  reduce using rule 81 (expr)


State 61

   77 expr: expr "<=" . expr

    NIL    shift, and go to state 19
    TRUE   shift, and go to state 20
    FALSE  shift, and go to state 21
    ID     shift, and go to state 22
    STR    shift, and go to state 23
    NUM    shift, and go to state 24
    '+'    shift, and go to state 25
    '-'    shift, and go to state 26
    '('    shift, and go to state 27
    '{'    shift, and go to state 28
    '['    shift, and go to state 29
    '!'    shift, and go to state 30

    func_left_side  go to state 31
    expr            go to state 99
    array_assign    go to state 33


State 62

   78 expr: expr ">=" . expr

    NIL    shift, and go to state 19
    TRUE   shift, and go to state 20
    FALSE  shift, and go to state 21
    ID     shift, and go to state 22
    STR    shift, and go to state 23
    NUM    shift, and go to state 24
    '+'    shift, and go to state 25
    '-'    shift, and go to state 26
    '('    shift, and go to state 27
    '{'    shift, and go to state 28
    '['    shift, and go to state 29
    '!'    shift, and go to state 30

    func_left_side  go to state 31
    expr            go to state 100
    array_assign    go to state 33


State 63

   75 expr: expr "==" . expr

    NIL    shift, and go to state 19
    TRUE   shift, and go to state 20
    FALSE  shift, and go to state 21
    ID     shift, and go to state 22
    STR    shift, and go to state 23
    NUM    shift, and go to state 24
    '+'    shift, and go to state 25
    '-'    shift, and go to state 26
    '('    shift, and go to state 27
    '{'    shift, and go to state 28
    '['    shift, and go to state 29
    '!'    shift, and go to state 30

    func_left_side  go to state 31
    expr            go to state 101
    array_assign    go to state 33


State 64

   76 expr: expr "!=" . expr

    NIL    shift, and go to state 19
    TRUE   shift, and go to state 20
    FALSE  shift, and go to state 21
    ID     shift, and go to state 22
    STR    shift, and go to state 23
    NUM    shift, and go to state 24
    '+'    shift, and go to state 25
    '-'    shift, and go to state 26
    '('    shift, and go to state 27
    '{'    shift, and go to state 28
    '['    shift, and go to state 29
    '!'    shift, and go to state 30

    func_left_side  go to state 31
    expr            go to state 102
    array_assign    go to state 33


State 65

   74 expr: expr '|' . expr

    NIL    shift, and go to state 19
    TRUE   shift, and go to state 20
    FALSE  shift, and go to state 21
    ID     shift, and go to state 22
    STR    shift, and go to state 23
    NUM    shift, and go to state 24
    '+'    shift, and go to state 25
    '-'    shift, and go to state 26
    '('    shift, and go to state 27
    '{'    shift, and go to state 28
    '['    shift, and go to state 29
    '!'    shift, and go to state 30

    func_left_side  go to state 31
    expr            go to state 103
    array_assign    go to state 33


State 66

   73 expr: expr '&' . expr

    NIL    shift, and go to state 19
    TRUE   shift, and go to state 20
    FALSE  shift, and go to state 21
    ID     shift, and go to state 22
    STR    shift, and go to state 23
    NUM    shift, and go to state 24
    '+'    shift, and go to state 25
    '-'    shift, and go to state 26
    '('    shift, and go to state 27
    '{'    shift, and go to state 28
    '['    shift, and go to state 29
    '!'    shift, and go to state 30

    func_left_side  go to state 31
    expr            go to state 104
    array_assign    go to state 33


State 67

   80 expr: expr '<' . expr

    NIL    shift, and go to state 19
    TRUE   shift, and go to state 20
    FALSE  shift, and go to state 21
    ID     shift, and go to state 22
    STR    shift, and go to state 23
    NUM    shift, and go to state 24
    '+'    shift, and go to state 25
    '-'    shift, and go to state 26
    '('    shift, and go to state 27
    '{'    shift, and go to state 28
    '['    shift, and go to state 29
    '!'    shift, and go to state 30

    func_left_side  go to state 31
    expr            go to state 105
    array_assign    go to state 33


State 68

   79 expr: expr '>' . expr

    NIL    shift, and go to state 19
    TRUE   shift, and go to state 20
    FALSE  shift, and go to state 21
    ID     shift, and go to state 22
    STR    shift, and go to state 23
    NUM    shift, and go to state 24
    '+'    shift, and go to state 25
    '-'    shift, and go to state 26
    '('    shift, and go to state 27
    '{'    shift, and go to state 28
    '['    shift, and go to state 29
    '!'    shift, and go to state 30

    func_left_side  go to state 31
    expr            go to state 106
    array_assign    go to state 33


State 69

   58 expr: expr '+' . expr

    NIL    shift, and go to state 19
    TRUE   shift, and go to state 20
    FALSE  shift, and go to state 21
    ID     shift, and go to state 22
    STR    shift, and go to state 23
    NUM    shift, and go to state 24
    '+'    shift, and go to state 25
    '-'    shift, and go to state 26
    '('    shift, and go to state 27
    '{'    shift, and go to state 28
    '['    shift, and go to state 29
    '!'    shift, and go to state 30

    func_left_side  go to state 31
    expr            go to state 107
    array_assign    go to state 33


State 70

   59 expr: expr '-' . expr

    NIL    shift, and go to state 19
    TRUE   shift, and go to state 20
    FALSE  shift, and go to state 21
    ID     shift, and go to state 22
    STR    shift, and go to state 23
    NUM    shift, and go to state 24
    '+'    shift, and go to state 25
    '-'    shift, and go to state 26
    '('    shift, and go to state 27
    '{'    shift, and go to state 28
    '['    shift, and go to state 29
    '!'    shift, and go to state 30

    func_left_side  go to state 31
    expr            go to state 108
    array_assign    go to state 33


State 71

   60 expr: expr '*' . expr

    NIL    shift, and go to state 19
    TRUE   shift, and go to state 20
    FALSE  shift, and go to state 21
    ID     shift, and go to state 22
    STR    shift, and go to state 23
    NUM    shift, and go to state 24
    '+'    shift, and go to state 25
    '-'    shift, and go to state 26
    '('    shift, and go to state 27
    '{'    shift, and go to state 28
    '['    shift, and go to state 29
    '!'    shift, and go to state 30

    func_left_side  go to state 31
    expr            go to state 109
    array_assign    go to state 33


State 72

   61 expr: expr '/' . expr

    NIL    shift, and go to state 19
    TRUE   shift, and go to state 20
    FALSE  shift, and go to state 21
    ID     shift, and go to state 22
    STR    shift, and go to state 23
    NUM    shift, and go to state 24
    '+'    shift, and go to state 25
    '-'    shift, and go to state 26
    '('    shift, and go to state 27
    '{'    shift, and go to state 28
    '['    shift, and go to state 29
    '!'    shift, and go to state 30

    func_left_side  go to state 31
    expr            go to state 110
    array_assign    go to state 33


State 73

   62 expr: expr '%' . expr

    NIL    shift, and go to state 19
    TRUE   shift, and go to state 20
    FALSE  shift, and go to state 21
    ID     shift, and go to state 22
    STR    shift, and go to state 23
    NUM    shift, and go to state 24
    '+'    shift, and go to state 25
    '-'    shift, and go to state 26
    '('    shift, and go to state 27
    '{'    shift, and go to state 28
    '['    shift, and go to state 29
    '!'    shift, and go to state 30

    func_left_side  go to state 31
    expr            go to state 111
    array_assign    go to state 33


State 74

    2 program: EVAL '(' expr ')' . ';'

    ';'  shift, and go to state 112


State 75

   23 struct_declare: ID ':' . INT struct_declare2
   24               | ID ':' . ID struct_declare2

    INT  shift, and go to state 113
    ID   shift, and go to state 114


State 76

   19 decls: VAR ID ':' ID '=' . '{' struct_declare '}' ';'
   25 struct_declare: ID '=' . expr struct_declare2
   26               | ID '=' . '{' struct_declare '}' struct_declare2

    NIL    shift, and go to state 19
    TRUE   shift, and go to state 20
    FALSE  shift, and go to state 21
    ID     shift, and go to state 22
    STR    shift, and go to state 23
    NUM    shift, and go to state 24
    '+'    shift, and go to state 25
    '-'    shift, and go to state 26
    '('    shift, and go to state 27
    '{'    shift, and go to state 115
    '['    shift, and go to state 29
    '!'    shift, and go to state 30

    func_left_side  go to state 31
    expr            go to state 116
    array_assign    go to state 33


State 77
